--- a/frontend/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
+++ b/frontend/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
@@ -8,7 +8,7 @@
                         Perfil
                     </a>
                 </li> -->
-                <li class="nav-item" *ngIf="permissions.includes('change_user')">
+                <li class="nav-item" *ngIf="permissions.includes('change_profile')">
                     <a class="nav-link active" aria-current="page" routerLink="cambiar_contrasenia">
                         <span data-feather="cambiar_contraseña"></span>
                         Cambiar Contraseña
