--- a/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.css
@@ -65,3 +65,13 @@ a {
   [class="fila"]{
     height: 20px;
   }
+  #loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: no-repeat rgb(249,249,249);
+    opacity: .8;
+}
