--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -42,14 +42,12 @@
                         Consultas Empresas
                     </a>
                 </li>
-        <!--    <li class="nav-item" *ngIf="permissions.view_documentos">
+                <li class="nav-item" *ngIf="permissions.view_documentos">
                     <a class="nav-link active" aria-current="page" routerLink="documentos-company">
                         <span data-feather="documentos-company"></span>
                         Documentos
                     </a>
-
-
-                </li>-->
+                </li>
             </ul>
         </div>
     </nav>
