--- a/frontend/Proyecto/src/app/componentes/empresa/grupos-empresa/grupos-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/grupos-empresa/grupos-empresa.component.html
@@ -76,7 +76,11 @@
                         </div>
                     </fieldset>
                 </div>
-
+                <div *ngIf="loanding" id="loader" class="w-100">
+                    <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="color"
+                        [mode]="mode">
+                    </mat-progress-spinner>
+                </div>
                 <!--<div *ngIf="loanding" id="loader" class="w-100">
                     <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="color"
                         [mode]="mode">
