--- a/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.html
@@ -123,7 +123,7 @@
                             <div class="form-floating">
                                 <select #inputGrupos id="grupos" name="miselect"
                                     (change)="buscarPermisos(inputGrupos.value)" class="filtered campos w-100">
-                                    <option selected></option>
+                                    <option value="0" selected></option>
                                     <option [value]="item.id" *ngFor="let item of listGrupos">{{item.name}}</option>
                                 </select>
                             </div>
